--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "hapi": "ts-node ./server/hapi.server.ts",
+    "hapi": "ts-node -r tsconfig-paths/register ./server/hapi.server.ts",
     "express": "ts-node ./server/express.server.ts",
-    "hapi:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./server/hapi.server.ts",
+    "hapi:live": "nodemon --compilers ts:ts-node/register -r tsconfig-paths/register --exec ./node_modules/.bin/ts-node -- ./server/hapi.server.ts",
     "express:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./server/express.server.ts",
     "mongo": "mongod --httpinterface --port 8011"
   },
@@ -29,6 +29,7 @@
     "mongoose": "^4.12.1",
     "nodemon": "^1.12.1",
     "ts-node": "^3.3.0",
+    "tsconfig-paths": "^2.3.0",
     "typescript": "^2.5.3"
   }
 }
