express is back

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "hapi": "ts-node -r tsconfig-paths/register ./server/hapi.server.ts",
-    "express": "ts-node ./server/express.server.ts",
+    "express": "ts-node -r tsconfig-paths/register  ./server/express.server.ts",
     "hapi:live": "nodemon --compilers ts:ts-node/register -r tsconfig-paths/register --exec ./node_modules/.bin/ts-node -- ./server/hapi.server.ts",
-    "express:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./server/express.server.ts",
+    "express:live": "nodemon --compilers ts:ts-node/register -r tsconfig-paths/register --exec ./node_modules/.bin/ts-node -- ./server/express.server.ts",
     "mongo": "mongod --httpinterface --port 8011"
   },
   "repository": {
