--- a/package.json
+++ b/package.json
@@ -31,5 +31,11 @@
     "ts-node": "^3.3.0",
     "tsconfig-paths": "^2.3.0",
     "typescript": "^2.5.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.11.0",
+    "@types/socket.io": "^1.4.31",
+    "@types/webpack-dev-server": "^2.9.2",
+    "socket.io": "^2.0.4"
   }
 }
