--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/express": "^4.11.0",
     "@types/socket.io": "^1.4.31",
     "@types/webpack-dev-server": "^2.9.2",
+    "body-parser": "^1.18.2",
     "socket.io": "^2.0.4"
   }
 }
